# DevUtils

./: README.md  pyproject.toml  setup_devutils.py
src/devutils/: __init__.py  cli.py
src/devutils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/devutils/gui/: main.py
src/devutils/modules/: base64util.py  duplicates.py  ping.py  qr.py
